Snap Selected to Active not working properly. #92663

Closed
opened 2021-10-31 00:21:06 +02:00 by Patrick · 10 comments

System Information
Operating system: Win 10
Graphics card: GTX 1060

Blender Version
Broken: Blender 3.0 Beta oct 30 2021
Worked: 2.93
Caused by 2bcf93bbbe

Bug or unintended behavior:
The "Snap Selected to Active" operator moves the Selected halfway to Active, and the Active the same amount so they both move half the distance between both, in the same direction.

Exact steps for others to reproduce the error

  • Open .blend file
  • {key Shift S} -> Selection to Active

Test File:
#92663.blend

**System Information** Operating system: Win 10 Graphics card: GTX 1060 **Blender Version** Broken: Blender 3.0 Beta oct 30 2021 Worked: 2.93 Caused by 2bcf93bbbe Bug or unintended behavior: The "Snap Selected to Active" operator moves the Selected halfway to Active, and the Active the same amount so they both move half the distance between both, in the same direction. **Exact steps for others to reproduce the error** - Open .blend file - {key Shift S} -> `Selection to Active` Test File: [#92663.blend](https://archive.blender.org/developer/F11637581/T92663.blend)
Author

Added subscriber: @Patnard

Added subscriber: @Patnard
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. I can confirm on master: ae9052a33e

Hi, thanks for the report. I can confirm on master: ae9052a33e646376b199be44eac26ca5dbe30e87
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Caused by 2bcf93bbbe

cc @ideasman42

Caused by 2bcf93bbbe cc @ideasman42
Pratik Borhade self-assigned this 2021-10-31 20:13:30 +01:00
Member

I think I found the fix. Will add the patch shortly :)

I think I found the fix. Will add the patch shortly :)
Author

Thanks for the follow up! :)

Thanks for the follow up! :)

This issue was referenced by 6e26c615af

This issue was referenced by 6e26c615af3a12facd6e77b79c54da14ce53325f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92663
No description provided.