Fix T92663: Snap Selected to Active not working properly

Wrong values were passed for use_offset and pivot_point in
2bcf93bbbeb9e32f680c37a1e0054ff16cb00ef0

Maniphest Tasks: T92663

Ref D13056